--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -58,6 +58,8 @@ html{
     text-align: center;
 }
 
+
+
 #main-title-span{
     color: orange;
     position:absolute;
@@ -66,6 +68,16 @@ html{
     font-size: 6em;
     top: 60px;
     left: 180px;
+}
+
+#newpoll-main-title-span{
+    color: orange;
+    position:absolute;
+    font-weight: bolder;
+    font-family: Arial;
+    font-size: 3em;
+    top: 20px;
+    left: 60px;
 }
 
 #main-descrpt-span{
