--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -44,7 +44,7 @@ textarea{
 }
 
 #main-div{
-    border: 10px solid red;
+    border: 10px solid blue;
     border-radius: 20px;
     background-color: #ffff99;
     position: absolute;
