--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -44,12 +44,12 @@ textarea{
 }
 
 #main-div{
-    border: 10px solid blue;
+    border: 10px solid red;
     border-radius: 20px;
     background-color: #ffff99;
     position: absolute;
     top: 120px;
-    height: 5980px;
+    height: 7000px;
     width: 90%;
     left: 66px;
 }
