--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -382,7 +382,17 @@ select{
     position: absolute;
     font-weight: bolder;
     font-size: 2.1em;
-    top: 165px;
+    top: 175px;
     left:0px;
     
+}
+
+
+#idliketovote{
+    color: #ff8000;
+    position: absolute;
+    font-weight: bolder;
+    font-size: 1.4em;
+    top: 215px;
+    left:0px;
 }
