--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -207,7 +207,7 @@ form{
     border: 5px solid green;
     height:40px;
     width: 1090px;
-    background-color: #a6ff4d;
+    background-color: #e5ffcc;
     text-align: center;
     font-size: 1em;
     font-weight: bolder;
