--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -51,7 +51,7 @@ textarea{
     top: 120px;
     height: 7000px;
     width: 1300px;
-    left: 66px;
+    left: 60px;
 }
 
 #voting-poll-div{
@@ -87,7 +87,7 @@ textarea{
     background-color: #b3d7ff;
     position: absolute;
     top: 80px;
-    width: 85%;
+    width: 1100px;
     height: 560px;
     z-index: 3;
     left: 82px;
