--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -248,11 +248,22 @@ form{
 }
 
 h5{
-    position:absolute;
-    top: 6140px;
+ 
     color: blue;
-    left: 66px;
+    display: inline-block;
+    margin: auto;
+ 
 }
+
+
+#ode-h5-div{
+    position:absolute;
+    width: 100%;
+    height: 180px;
+    margin: auto;
+    
+}
+
 
 #home-div-out{
     position: absolute;
