--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -250,7 +250,6 @@ form{
 h5{
  
     color: blue;
-    display: inline-block;
     margin: auto;
  
 }
@@ -260,7 +259,7 @@ h5{
     position:absolute;
     width: 100%;
     height: 180px;
-    margin: auto;
+    top: 1100px;
     
 }
 
