--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -84,17 +84,18 @@ html{
 
 
 
-#newpoll-main-div-title{
+#newpoll-main-inner-div{
     border: 20px solid green;
     border-radius: 20px;
     background-color: #b3d7ff;
     position: absolute;
     top: 80px;
     width: 1100px;
-    height: 560px;
+    height: 710px;
     z-index: 3;
     left: 82px;
     text-align: center;
+    
 }
 
 
@@ -145,9 +146,30 @@ form{
     font-size: 1.8em;
 }
 
+
+#form-div{
+    position: absolute;
+    top: 50px;
+}
+#serving-stnd{
+    position: absolute;
+    left: -60px;
+    top: 150px;
+    color: green;
+    font-size: 1.1em;
+    width: 400px;
+    height: 240px;
+}
+
+#serving-stnd-input{
+    margin-left: -110px;
+    height: 40px;
+    margin-top: 0px;
+}
+
 #radio-div{
     position: absolute;
-    top: 170px;
+    top: 300px;
     width: 900px;
     height: 350px;
     text-align: left;
@@ -161,12 +183,12 @@ form{
 }
 
 #newpoll-main-title-span{
-    color: orange;
+    color: blue;
     position:absolute;
     font-weight: bolder;
     font-family: Arial;
     font-size: 3em;
-    top: 20px;
+    top: 45px;
     left: 60px;
 }
 
@@ -362,8 +384,9 @@ select{
     position: relative;
     margin: auto;
     top: 45px;
-    height: 770px;
+    height: 930px;
     width: 1300px;
+    z-index: 1;
 }
 
 
@@ -371,13 +394,14 @@ select{
 #submit{
     background-color: blue;
     position: absolute;
-    left:780px;
-    top: 385px;
+    left: 770px;
+    top: 460px;
     color: white;
     font-weight: bold;
     width: 140px;
     font-size: 1.4em;
     height: 50px;
+    z-index: 7;
 }
 
 #chart{
