--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -193,7 +193,7 @@ form{
 }
 
 #newpoll-main-title-span{
-    color: blue;
+    color: orange;
     position:absolute;
     font-weight: bolder;
     font-family: Arial;
