--- a/ode_food_poll/stylesheet.css
+++ b/ode_food_poll/stylesheet.css
@@ -31,6 +31,7 @@ html{
     left: 560px;
     font-size: 1.6em;
     z-index: 7;
+    pointer-events:auto;
 }
 
 
@@ -132,10 +133,10 @@ form{
     font-family: Arial;
     font-size: 6em;
     top: 60px;
-    left: 180px;
+    left: 165px;
 }
 
-#input-title{
+#foodname-form{
     position: absolute;
     left: 0px;
     top: 105px;
@@ -144,12 +145,15 @@ form{
     background-color: yellow;
     color: blue;
     font-size: 1.8em;
+    z-index: 1;
 }
 
 
 #form-div{
     position: absolute;
     top: 50px;
+    z-index: 3;
+    margin: 0 auto;
 }
 #serving-stnd{
     position: absolute;
@@ -218,9 +222,9 @@ form{
     width: 510px;
     height: 1200px;
     top: 40px;
-    left: 35px;
+    left: 60px;
     margin: auto;
-    background-color: #ffff00;
+    text-align: left;
 }
 
 
@@ -240,6 +244,7 @@ form{
     top: 45px;
     left: 0px;
     margin: auto;
+    text-align: left;
 }
 
 
@@ -336,6 +341,7 @@ h5{
      position: absolute;
      left: 935px;
      background-color: #ffff99;
+     pointer-events: auto;
 }
 
 #mypolls-span{
@@ -347,6 +353,7 @@ h5{
     position: absolute;
     left: 1040px;
     background-color: #ffb366;
+    pointer-events: auto;
 }
 
 #newpoll-span{
@@ -383,6 +390,13 @@ h5{
 select{
     
     width: 150px;
+    height: 40px;
+    font-size: 1.6em;
+}
+
+#newpoll-servings{
+    
+    width: 200px;
     height: 40px;
     font-size: 1.6em;
 }
@@ -458,7 +472,19 @@ select{
     background-color: blue;
     position: absolute;
     left: -65px;
-    top: 60px;
+    top: 70px;
+    color: white;
+    font-weight: bold;
+    width: 140px;
+    font-size: 1.2em;
+    height: 30px;
+}
+
+#votesubmit-in{
+   background-color: blue;
+    position: absolute;
+    left: -65px;
+    top: 310px;
     color: white;
     font-weight: bold;
     width: 140px;
@@ -492,7 +518,7 @@ select{
     
     position: absolute;
     left: 0px;
-    top: 600px;
+    top: 660px;
 }
 
 .customval{
@@ -500,3 +526,289 @@ select{
     height: 34px;
 }
 
+h3{
+    font-weight: 1900;
+}
+
+#inner-form-div{
+    background-color: #88ff4d;
+    width: 1200px;
+    height: 950px;
+    z-index: 9;
+    position: relative;
+    top: -160px;
+    
+     margin: 0 auto;
+     border: 30px solid yellow;
+     margin-left: -85px;
+     visibility: visible;
+     text-align: middle;
+}
+
+#firstvote-h1{
+    font-weight: 1200;
+    font-family: Arial;
+    font-size: 4em;
+    position: relative;
+    top: -80px;
+    
+    text-align: middle;
+}
+
+#newpoll-submit-img{
+    position: absolute;
+    top: 195px;
+    left: 30px;
+}
+
+#username{
+    position: relative;
+    left: -250px;
+    top: -70px;
+    color: black;
+}
+
+#newpoll-submit-foodname{
+    position: relative;
+    color: green;
+    font-size: 4em;
+    vertical-align: middle;
+    display: inline-block;
+    top: -45px;
+
+}
+
+#newpoll-serving-stnd{
+    position: relative;
+    color:red;
+    font-weight: bolder;
+    font-family: Arial;
+    top: -110px;
+    font-size: 2.5em;
+  
+}
+
+#newpoll-servings{
+    
+    position: relative;
+    font-weight: bolder;
+    font-family: Arial;
+    top: -120px;
+    left: 0px;
+}
+
+#newpollsubmit-submit{
+    background-color: blue;
+    position: relative;
+    top: -120px;
+    left: 15px;
+    color: white;
+    font-weight: bold;
+    width: 140px;
+    font-size: 1.4em;
+    height: 50px;
+
+}
+
+#inner-form-content{
+    background-color: #ffdab3;
+    position: absolute;
+    top: 150px;
+    left: 210px;
+    height: 675px;
+    width: 880px;
+    border: 10px solid black;
+    border-radius: 50%;
+}
+
+#userpoll-ckbox{
+    position: absolute;
+    top: 225px;
+    color: black;
+    left: -65px;
+}
+
+#userpoll-ckbox-text{
+    color: black;
+    background-color: yellow;
+    border: 9px solid blue;
+    width: 280px;
+    padding-left: 20px;
+    position: absolute;
+    top: 185px;
+    left: -30px;
+}
+
+#dbupdate-status-div{
+    margin: 0 auto;
+    position: absolute;
+    top: 121px;
+    left: 350px;
+    z-index: 15;
+}
+
+#dbupdate-status-h1{
+    text-align: center;
+}
+
+#inner-form-foodname-div{
+    width: 720px;
+    height:385px;
+    position: relative;
+    top: 145px;
+    left: 0px;
+    display: inline-block;
+}
+
+#userpolls-div{
+    border: 10px solid #ff6666;
+    height:60px;
+    width: 1090px;
+    background-color: #bf80ff;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bolder;
+    color: Yellow;
+    box-shadow: 10px 10px 5px #ff66ff;
+    text-shadow: 2px 2px #FF0000;
+}
+
+.userpolls-ingre-type{
+    border: 10px solid green;
+    height:60px;
+    width: 1090px;
+    background-color: blue;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bolder;
+    color: white;
+    box-shadow: 10px 10px 5px Yellow;
+    text-shadow: 2px 2px gray;
+}
+
+.userpolls-ingredients{
+    border: 10px solid orange;
+    height:60px;
+    width: 1090px;
+    background-color: #99ccff;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bolder;
+    color: purple;
+    box-shadow: 10px 10px 5px Yellow;
+    text-shadow: 2px 2px white;
+}
+
+#uservotes-div{
+    border: 10px solid gray;
+    position: relative;
+    height:60px;
+    width: 1090px;
+    background-color: white;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bolder;
+    color: green;
+    top: 100px;
+}
+
+.uservotes-ingre-type{
+    border: 10px solid #006699;
+    height:60px;
+    width: 1090px;
+    background-color: #b3ffcc;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 2em;
+    font-weight: bolder;
+    color:green;
+ 
+    position: relative;
+    top: 100px;
+}
+
+.uservotes-ingredients{
+    border: 5px solid green;
+    height:40px;
+    width: 1090px;
+    background-color: #e5ffcc;
+    text-align: center;
+    font-size: 1em;
+    font-weight: bolder;
+    color: blue;
+    /*color: #cc5200;*/
+     position: relative;
+    top: 100px;
+}
+
+select{
+    font-weight: bolder;
+}
+
+input{
+    font-weight: bolder;
+}
+
+#usermade-votes-div{
+    width: 1300px;
+    height: 500px;
+    background-color: white;
+    z-index: 10;
+    position: absolute;
+    top: 1600px;
+    border: 10px solid yellow;
+    background-color: #66ffcc;
+    color: blue;
+    font-weight: bolder;
+    font-size: 5em;
+    text-shadow: 5px 5px white;
+    margin: 0 auto;
+    
+}
+
+.vote-div{
+    border: 10px solid blue;
+    height:60px;
+    width: 1090px;
+    background-color: yellow;
+    text-align: center;
+    font-size: 0.3em;
+    font-weight: bolder;
+    color: black;
+    /*color: #cc5200;*/
+     position: relative;
+     text-shadow: none;
+    top: 30px;
+    margin: 0 auto;
+}
+
+.vote-option-span{
+    color: red;
+
+}
+
+.vote-timestamp-span{
+    font-size: 0.8em;
+}
+
+#delete-button-div{
+    background-color: yellow;
+    width: 65px;
+    height: 65px;
+    text-align: center;
+    font-size: 3em;
+    position: absolute;
+    left: 1170px;
+    top: 40px;
+    font-weight: bolder;
+    font-family: Arial;
+    border: 10px solid blue;
+}
+
+#delete-poll-span{
+    position: absolute;
+    top: 110px;
+    left: 1160px;
+}
